# bin2hex

./: .gitignore  CMakeLists.txt  README.md
src/: bin2hex.cpp  hex2bin.cpp  log.cpp  pipe.cpp
src/include/: log.hpp  pipe.hpp
